videodecoder: Ignore caps events if the caps did not change

https://bugzilla.gnome.org/show_bug.cgi?id=697672